-- V14: Create the moderation job queue table
CREATE TABLE moderation_jobs (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    post_id bigint NOT NULL,
    post_version integer NOT NULL,
    source_field varchar(100) NOT NULL,
    content_type job_content_type NOT NULL,
    payload text NOT NULL,
    status moderation_status NOT NULL DEFAULT 'pending',
    error_message text,
    created_at timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_moderation_post 
        FOREIGN KEY (post_id) 
        REFERENCES posts(id) 
        ON DELETE CASCADE
);

CREATE INDEX idx_mod_jobs_post_v ON moderation_jobs(post_id, post_version);
CREATE INDEX idx_mod_jobs_status ON moderation_jobs(status);
